--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <li><strong>Date of Birth:</strong> 07 November 2004</li>
 
-            <li><strong>Website :</strong> company.co</li>
+            <li><strong>Website :</strong> https://harishkumar78-del.github.io/portfolio/</li>
 
             <li><strong>Email :</strong> harishkumar.m.it.2022@snsct.org</li>
           </ul>
